--- a/HTML/homework-1/spartak.html
+++ b/HTML/homework-1/spartak.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
 </head>
-<body>
+<body bgcolor="#fff8dc">
 <h2>
     Торт спартак
 </h2>
