--- a/HTML/karusel/karusel.html
+++ b/HTML/karusel/karusel.html
@@ -10,19 +10,47 @@
 </head>
 <body>
 <div class="slider-wrap">
-    <a class="next2" onclick="nextSlide2()">&#10095;</a>
-    <a class="previous2" onclick="previousSlide2()">&#10094;</a>
-    <div class="slider2">
+    <a class="next" onclick="nextSlide()">&#10095;</a>
+    <a class="previous" onclick="previousSlide()">&#10094;</a>
+    <div class="slider">
         <img src="https://i.picsum.photos/id/1/367/267.jpg?hmac=jZdc5TviQPVhxLyvyU8siO-I5FMVXVZpBhsBYKbBJpM" alt="" id="img0">
         <img src="https://i.picsum.photos/id/10/367/267.jpg?hmac=XRdepQX9y39tepelazZaEAxb6SbCWtual9_w28FPb6U" alt="">
         <img src="https://i.picsum.photos/id/100/367/267.jpg?hmac=mNdSdA1Zh6w4qessdp5n207IFw3q_8FbbQ1gIr0jYBs" alt="">
         <img src="https://i.picsum.photos/id/1000/367/267.jpg?hmac=uO9iQNujyGpqk0Ieytv_xfwbpy3ENW4PhnIZ1gsnldI" alt="">
         <img src="https://i.picsum.photos/id/1003/367/267.jpg?hmac=1VHS13exKZ5QWJdtDTu0iCUTBZKCE_clSpR-wc3PW3g" alt="">
         <img src="https://i.picsum.photos/id/1004/367/267.jpg?hmac=dNFSbCRe8enn3ikNS0FvmnagW4IzORvJuuTAJ_UUGf8" alt="">
+    </div>
+</div>
+
+<div class="slider-wrap2">
+    <a class="next2" onclick="nextSlide2()">&#10095;</a>
+    <a class="previous2" onclick="previousSlide2()">&#10094;</a>
+    <div class="slider2">
+        <img class="image-item" src="https://i.picsum.photos/id/1/367/267.jpg?hmac=jZdc5TviQPVhxLyvyU8siO-I5FMVXVZpBhsBYKbBJpM" alt="" >
+        <img class="image-item" src="https://i.picsum.photos/id/10/367/267.jpg?hmac=XRdepQX9y39tepelazZaEAxb6SbCWtual9_w28FPb6U" alt="">
+        <img class="image-item" src="https://i.picsum.photos/id/100/367/267.jpg?hmac=mNdSdA1Zh6w4qessdp5n207IFw3q_8FbbQ1gIr0jYBs" alt="">
+        <img class="image-item" src="https://i.picsum.photos/id/1000/367/267.jpg?hmac=uO9iQNujyGpqk0Ieytv_xfwbpy3ENW4PhnIZ1gsnldI" alt="">
+        <img class="image-item" src="https://i.picsum.photos/id/1003/367/267.jpg?hmac=1VHS13exKZ5QWJdtDTu0iCUTBZKCE_clSpR-wc3PW3g" alt="">
+        <img class="image-item" src="https://i.picsum.photos/id/1004/367/267.jpg?hmac=dNFSbCRe8enn3ikNS0FvmnagW4IzORvJuuTAJ_UUGf8" alt="">
 
     </div>
-
+    <div class="dots">
+        <a class="dot1">&#8226;</a>
+        <a class="dot2">&#8226;</a>
+    </div>
 </div>
+
+
+<div class="slider-wrap3">
+    <a class="next3" onclick="nextSlide3()">&#10095;</a>
+    <a class="previous3" onclick="previousSlide3()">&#10094;</a>
+    <div class="slider3">
+        <img class="item1">
+        <img class="item2">
+        <img class="item3">
+    </div>
+</div>
+
 <script src="karusel.js"></script>
 </body>
 </html>
